<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twistoast - strings.xml
  ~ Copyright (C) 2013-2018 Baptiste Candellier
  ~
  ~ Twistoast is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Twistoast is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

	<string name="app_name" translatable="false">Twistoast</string>

	<string name="lbl_line">Ligne</string>
	<string name="lbl_direction">Direction</string>
	<string name="lbl_stop">Arrêt</string>
	<string name="lbl_preview">Aperçu de l\'arrêt</string>
	<string name="title_activity_add_stop">Ajouter un arrêt</string>
	<string name="action_ok">Ajouter</string>
	<string name="action_delete">Supprimer</string>
	<string name="action_refresh">Rafraîchir</string>
	<string name="action_cancel">Annuler</string>
	<string name="loading_data">Chargement…</string>
	<string name="loading_error">Erreur lors du chargement des données.</string>
	<string name="no_upcoming_stops">Pas d\'arrêts prévus.</string>
	<string name="confirm_delete_success">Succès de la suppression !</string>
	<string name="cancel_stop_deletion">Annuler</string>
	<string name="direction_name">→ Dir. %1$s</string>
	<string name="stop_name">Arrêt %1$s</string>
	<string name="error_toast">Erreur : %1$s</string>
	<string name="added_toast">Ajouté : %1$s</string>
	<string name="add_error_duplicate">Cet arrêt a déjà été ajouté dans l\'application</string>
	<string name="add_error_illegal_argument">Quelque-chose ne va pas, vérifiez les valeurs de la ligne, direction et arrêt.</string>
	<string name="action_open_website">Ouvrir dans le navigateur</string>

	<string name="schedule_time_currently_at_stop">Passage en cours</string>
	<string name="schedule_time_arrival_imminent">Passage imminent</string>
	<string name="schedule_time_countdown">%1$d minutes</string>

	<string name="add_first_stop_title">Rien pour l\'instant</string>

	<string name="drawer_item_realtime">Temps réel</string>
	<string name="drawer_item_timetables">Horaires à l\'arrêt</string>
	<string name="drawer_item_routes">Itinéraires</string>
	<string name="drawer_item_map">Plan du réseau</string>
	<string name="drawer_item_traffic">Info trafic</string>
	<string name="drawer_item_news">Actualités</string>
	<string name="drawer_item_social">Twitter</string>
	<string name="drawer_item_pricing">Tarifs</string>
	<string name="drawer_item_preferences">Paramètres</string>
	<string name="drawer_item_about">À propos</string>

	<string name="stop_ref_update_message_title">Certains arrêts sont obsolètes !</string>
	<string name="stop_ref_update_message_action">MàJ</string>
	<string name="stop_ref_update_progress_title">Mise à jour des références des arrêts…</string>
	<string name="stop_ref_update_error_text">Erreur lors de la mise à jour.</string>

	<string name="error_retry">Réessayer</string>

	<string name="stop_action_delete">Supprimer</string>
	<string name="stop_action_watch">M\'alerter de l\'arrivée du prochain bus</string>
	<string name="stop_action_unwatch">Désactiver les notifications</string>
	<string name="pref_cat_notif_traffic">Notifications info trafic</string>
	<string name="fab_add_stop_description">Ajouter un arrêt</string>
	<string name="error_toast_twisto">Erreur Twisto %1$s. Réessayez plus tard.</string>
	<string name="error_toast_twisto_detailed">Erreur Twisto %1$s (%2$s). Réessayez plus tard.</string>
	<string name="drawer_section_more_twisto_info">Informations réseau</string>
	<string name="drawer_action_open">Ouvrir le menu</string>
	<string name="drawer_action_close">Fermer le menu</string>

	<string name="sort_by_title">Trier les arrêts</string>
	<string name="sort_by_stop">Trier par arrêt</string>
	<string name="sort_by_line">Trier par ligne</string>

	<string name="description_expand">Détails</string>

</resources>