<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twistoast - bottom_navigation.xml
  ~ Copyright (C) 2013-2018 Baptiste Candellier
  ~
  ~ Twistoast is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Twistoast is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dest_real_time"
        android:icon="@drawable/ic_directions_bus"
        android:title="@string/drawer_item_realtime"/>
    <item
        android:id="@+id/dest_time_tables"
        android:icon="@drawable/ic_schedule"
        android:title="@string/drawer_item_timetables"/>
    <item
        android:id="@+id/dest_routes"
        android:icon="@drawable/ic_directions"
        android:title="@string/drawer_item_routes"/>
    <item
        android:id="@+id/dest_map"
        android:icon="@drawable/ic_map"
        android:title="@string/drawer_item_map"/>
</menu>