<?xml version="1.0" encoding="utf-8"?><!--
  ~ Twistoast - stops_list_contextual.xml
  ~ Copyright (C) 2013-2016 Baptiste Candellier
  ~
  ~ Twistoast is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Twistoast is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_stop_delete"
        android:title="@string/stop_action_delete" />
    <item
        android:id="@+id/menu_stop_watch"
        android:title="@string/stop_action_watch" />
    <item
        android:id="@+id/menu_stop_unwatch"
        android:title="@string/stop_action_unwatch" />
</menu>