<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twistoast - realtime_list.xml
  ~ Copyright (C) 2013-2016 Baptiste Candellier
  ~
  ~ Twistoast is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Twistoast is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:icon="@drawable/ic_sort"
		android:title="@string/sort_by_title"
		app:showAsAction="always">

		<menu>
			<item
				android:id="@+id/sortby_stop"
				android:title="@string/sort_by_stop" />
			<item
				android:id="@+id/sortby_line"
				android:title="@string/sort_by_line" />
		</menu>
	</item>
</menu>