<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twistoast - webview.xml
  ~ Copyright (C) 2013-2014  Baptiste Candellier
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/action_cancel_refresh"
		android:icon="@drawable/ic_action_cancel"
		android:showAsAction="ifRoom"
		android:title="@string/action_cancel"
		android:visible="false" />

	<item
		android:id="@+id/action_refresh_page"
		android:icon="@drawable/ic_action_refresh"
		android:showAsAction="ifRoom"
		android:title="@string/action_refresh" />

	<item
		android:id="@+id/action_open_website"
		android:icon="@drawable/ic_action_web_site"
		android:showAsAction="ifRoom"
		android:title="@string/action_open_website" />

</menu>