<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbl_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_line"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spin_line"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/lbl_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_direction"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spin_direction"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/lbl_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_stop"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spin_stop"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/lbl_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_preview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/view_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <include layout="@layout/schedule_row" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>