<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twistoast - app_shortcuts.xml
  ~ Copyright (C) 2013-2016 Baptiste Candellier
  ~
  ~ Twistoast is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Twistoast is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="realtime"
        android:enabled="true"
        android:icon="@drawable/ic_directions_bus"
        android:shortcutShortLabel="@string/drawer_item_realtime">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="fr.outadev.twistoast"
            android:targetClass="fr.outadev.twistoast.ActivityMain">
            <extra android:name="show_fragment" android:value="realtime" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="timetables"
        android:enabled="true"
        android:icon="@drawable/ic_schedule"
        android:shortcutShortLabel="@string/drawer_item_timetables">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="fr.outadev.twistoast"
            android:targetClass="fr.outadev.twistoast.ActivityMain">
            <extra android:name="show_fragment" android:value="timetables" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="routes"
        android:enabled="true"
        android:icon="@drawable/ic_navigation"
        android:shortcutShortLabel="@string/drawer_item_routes">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="fr.outadev.twistoast"
            android:targetClass="fr.outadev.twistoast.ActivityMain">
            <extra android:name="show_fragment" android:value="routes" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:shortcutShortLabel="@string/drawer_item_map">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="fr.outadev.twistoast"
            android:targetClass="fr.outadev.twistoast.ActivityMain">
            <extra android:name="show_fragment" android:value="map" />
        </intent>
    </shortcut>
</shortcuts>
