<!--
  ~ Twistoast - activity_new_stop.xml
  ~ Copyright (C) 2013-2018 Baptiste Candellier
  ~
  ~ Twistoast is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Twistoast is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v4.widget.SwipeRefreshLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/swipeRefreshContainer"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".FragmentNewStop">

	<ScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="?android:attr/colorBackground"
		android:orientation="vertical">

		<android.support.constraint.ConstraintLayout
			android:id="@+id/add_stop_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="@+id/spinDirection"
			app:layout_constraintTop_toBottomOf="@+id/spinDirection">

			<TextView
				android:id="@+id/lblLine"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:labelFor="@+id/spinLine"
				android:text="@string/lbl_line"
				android:textSize="13sp"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toTopOf="@+id/guideline3" />

			<Spinner
				android:id="@+id/spinLine"
				style="@style/Widget.AppCompat.Spinner"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toStartOf="@+id/guideline2"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toBottomOf="@+id/lblLine" />

			<TextView
				android:id="@+id/lblDirection"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:labelFor="@+id/spinDirection"
				android:text="@string/lbl_direction"
				android:textSize="13sp"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toBottomOf="@+id/spinLine" />

			<Spinner
				android:id="@+id/spinDirection"
				style="@style/Widget.AppCompat.Spinner"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toStartOf="@+id/guideline2"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toBottomOf="@+id/lblDirection" />

			<TextView
				android:id="@+id/lblStop"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="18dp"
				android:labelFor="@+id/spinStop"
				android:text="@string/lbl_stop"
				android:textSize="13sp"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toBottomOf="@+id/spinDirection" />

			<Spinner
				android:id="@+id/spinStop"
				style="@style/Widget.AppCompat.Spinner"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toStartOf="@+id/guideline2"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toBottomOf="@+id/lblStop" />

			<TextView
				android:id="@+id/lblPreview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:labelFor="@+id/view_preview"
				android:text="@string/lbl_preview"
				android:textSize="13sp"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toBottomOf="@+id/spinStop" />


			<include
				android:id="@+id/include2"
				layout="@layout/view_schedule_row"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toStartOf="@+id/guideline2"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toBottomOf="@+id/lblPreview" />

			<android.support.constraint.Guideline
				android:id="@+id/guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_begin="16dp" />

			<android.support.constraint.Guideline
				android:id="@+id/guideline2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_end="16dp" />

			<android.support.constraint.Guideline
				android:id="@+id/guideline3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_begin="16dp" />

		</android.support.constraint.ConstraintLayout>
	</ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
